logs/sbp.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/construct'...
Listing './lib/python3.5/site-packages/construct/examples'...
Listing './lib/python3.5/site-packages/construct/examples/formats'...
Listing './lib/python3.5/site-packages/construct/examples/formats/data'...
Listing './lib/python3.5/site-packages/construct/examples/formats/executable'...
Listing './lib/python3.5/site-packages/construct/examples/formats/filesystem'...
Listing './lib/python3.5/site-packages/construct/examples/formats/graphics'...
Listing './lib/python3.5/site-packages/construct/examples/protocols'...
Listing './lib/python3.5/site-packages/construct/lib'...
Listing './lib/python3.5/site-packages/construct-2.8.12.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/httpretty'...
Listing './lib/python3.5/site-packages/httpretty-0.8.14.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyftdi'...
Listing './lib/python3.5/site-packages/pyftdi/serialext'...
Listing './lib/python3.5/site-packages/pyftdi-0.13.4.egg-info'...
Listing './lib/python3.5/site-packages/pylibftdi'...
Listing './lib/python3.5/site-packages/pylibftdi/examples'...
Listing './lib/python3.5/site-packages/pylibftdi-0.16.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/pyusb-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_futures'...
Listing './lib/python3.5/site-packages/requests_futures-0.9.7.egg-info'...
Listing './lib/python3.5/site-packages/sbp'...
Listing './lib/python3.5/site-packages/sbp/client'...
Listing './lib/python3.5/site-packages/sbp/client/drivers'...
Compiling './lib/python3.5/site-packages/sbp/client/drivers/cdc_driver.py'...
***   File "./lib/python3.5/site-packages/sbp/client/drivers/cdc_driver.py", line 40
    print "Piksi disconnected"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sbp/client/drivers/network_drivers.py'...
***   File "./lib/python3.5/site-packages/sbp/client/drivers/network_drivers.py", line 77
    except socket.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sbp/client/drivers/pyserial_driver.py'...
***   File "./lib/python3.5/site-packages/sbp/client/drivers/pyserial_driver.py", line 54
    print "Error opening serial device '%s':" % port
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sbp/client/framer.py'...
***   File "./lib/python3.5/site-packages/sbp/client/framer.py", line 109
    print "Host Side Unhandled byte: 0x%02x" % ord(preamble)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sbp/client/loggers'...
Listing './lib/python3.5/site-packages/sbp/client/util'...
Compiling './lib/python3.5/site-packages/sbp/client/util/fftmonitor.py'...
***   File "./lib/python3.5/site-packages/sbp/client/util/fftmonitor.py", line 191
    print "Captured %d ffts from channel %d" % (samples, ch)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sbp/client/util/settingmonitor.py'...
***   File "./lib/python3.5/site-packages/sbp/client/util/settingmonitor.py", line 60
    match = map(lambda (x,y,z): all((section is None or x == section,
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sbp/version.py'...
***   File "./lib/python3.5/site-packages/sbp/version.py", line 122
    print get_git_version()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sbp-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/usb'...
Listing './lib/python3.5/site-packages/usb/backend'...
Listing './share'...
Listing './share/python-wheels'...
